# congee-living-memory

./: .gitignore  PRD_Chronos.md  README.md  test_chat.py  test_chat_502.py  test_embed.py  test_env_config.py  test_factory.py  test_memory_creation.py  test_production_embedding.py  test_pydantic_alias.py  test_review.py  test_review8.py  test_step8.py  test_step8_v2.py  test_step9.py
Backend/: .env.example  .gitignore  README.md  check_genai.py  fix_indent.py  patch_tests.py  phase3_walkthrough.md  pyproject.toml  test_auto_memory.py  test_chat_memory.py  test_conflict_memory.py  test_duplicate_memory.py  test_forget_memory.py  test_genai.py  test_memory_update.py  test_response.py  test_semantic_fallback.py  test_startup.py  tests_mock.py
Backend/app/: __init__.py  config.py  db.py  main.py
Backend/app/models/: __init__.py
Backend/app/routes/: chat.py  health.py  memories.py  memory_resolve.py  root.py  search.py
Backend/app/schemas/: __init__.py  chat.py  memories.py  memory_engine.py  search.py  system.py
Backend/app/services/: __init__.py  auto_memory.py  chat.py  memory.py  memory_extraction.py  prompt_builder.py  search.py
Backend/app/services/ai/: __init__.py  base.py  factory.py  gemini_chat.py
Backend/app/services/embedding/: __init__.py  base.py  factory.py  gemini.py
Backend/app/services/memory_repository/: __init__.py  base.py  factory.py  sqlite.py
Backend/app/services/search_backends/: __init__.py  base.py  factory.py  sqlite.py
Frontend/: .env.example  index.html  package-lock.json  package.json  test-api.ts  test-zod.ts  vite.config.ts  (+1 more)
(+34 files in other folders)
