[project]
name = "chronos-backend"
version = "0.1.0"
description = "Chronos — The Living Memory Engine. FastAPI backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "google-genai>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["F401", "F811", "F821", "F841", "I001", "E501", "UP006", "UP007", "UP017", "UP035", "UP045"]
ignore = ["B008"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
